updaterrr ~ b16 comma fix (alpha not invisible); ensure it's in

--- a/apollostage/b16/_base.scss
+++ b/apollostage/b16/_base.scss
@@ -2318,9 +2318,8 @@ body#torrents div.box.box_tags li > a:first-child:hover {
 }
 
 /* ### 2.2.4 Other special cases */
-/* remove visibility of commas between tag bubbles. */
+/* commas between tags: currently (2024), gazelle provides this inconsistently. */
 /* only needed on torrent and collage-discog pages. */
-/* per popular request, commas are helpful for copy & paste, make them invisible. */
 #torrent_table .tags,
 #discog_table .tags,
 #userhistory div.group_info.clear div.tags,
@@ -2328,12 +2327,8 @@ body#torrents div.box.box_tags li > a:first-child:hover {
 table.torrent_table.cats.checkboxes.border.m_table td.td_info.big_info div.group_info.clear div.tags,
 /* This monstrosity is for torrents.php?type=uploaded */
 table.torrent_table.cats.m_table td.td_info.big_info div.group_info.clear div.tags {
-  visibility: hidden; /* foo */
-}
-
-/* This should not be necessary... */
-.tags a {
-    visibility: visible;
+   /* use alpha, not invisibility, to preserve copy & paste ability */
+   color: rgba(0,0,0,10%);
 }
 
 /* ### 2.2.5 Snatched torrent indicators (BETA)*/
